potentially fix play button showring wrong state on FF at startup. Fix track metadata expanding table. Fix larget album art not being visible when body is big

--- a/public_html/static/music_worklet_inprogress/music.css
+++ b/public_html/static/music_worklet_inprogress/music.css
@@ -75,8 +75,12 @@ audio {
 }
 
 .trackmetadata {
-    display: inline-block;
+    display: flex;
+    align-items: center;
     margin-left: 20px;
+    min-height: 100px;
+    white-space: normal;
+    max-height: 100px;
 }
 
 .trackmetadatainner {
@@ -89,24 +93,20 @@ audio {
     /*justify-content: center*/
 }
 
+
 .fsalbumart {
-    position: absolute;
-    top: 0;
+    position: fixed;
+    top: 7%;
     left: 0;
-    /*width: 100%;
-    height: 100%;*/
     max-width: 100%;
     max-height: 100%;
     width: auto;
-    height: auto;
+    height: 70%;
     text-align: center;
     z-index: 201;
 }
 
-
-
 #prev_text {
-    white-space: normal;
     overflow: hidden;
     min-height: 100px;
 }
@@ -115,13 +115,11 @@ audio {
     /*min-width: 50%;
     max-width: 80%;
     width: auto;*/
-    white-space: normal;
     overflow: hidden;
     min-height: 100px;
 }
 
 #next_text {
-    white-space: normal;
     overflow: hidden;
     min-height: 100px;
 }
